--- a/fjc-webapp/package.json
+++ b/fjc-webapp/package.json
@@ -13,10 +13,12 @@
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
+    "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "postprocessing": "^6.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-just-parallax": "^3.1.16",
     "three": "^0.177.0"
   },
   "devDependencies": {
