--- a/fjc-webapp/package.json
+++ b/fjc-webapp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fluejs/noscroll": "^1.0.0",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
@@ -18,6 +19,8 @@
     "postprocessing": "^6.37.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "react-just-parallax": "^3.1.16",
     "three": "^0.177.0"
   },
